# V

./: big_endian.jinc  stdlib.jinc
.github/workflows/: audit_rust.yml  rust.yaml
ec/: test_xor1.c
init-jasmin-impl/: Cargo.toml  README.md
init-jasmin-impl/.github/workflows/: rust.yaml
init-jasmin-impl/src/: args.rs  constants.rs  impls.rs  lib.rs  main.rs  utils.rs  worker.rs
test/big_endian/: Makefile  test_big_endian.jazz
