[package]
name = "init-jasmin-impl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
reqwest = {version = "0.12.9", features = ["blocking"] }
serde = {version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"